[tool.poetry]
authors = ["Arash Hatami <hatamiarash7@gmail.com>"]
description = "Monitor Wireguard peers using kernel events"
license = "MIT"
name = "wireguard-peer-monitoring"
packages = [{include = "monitoring"}]
readme = "README.md"
version = "1.3.0"

[tool.poetry.dependencies]
httpx = "^0.28.0"
loguru = "^0.7.2"
prometheus-client = "^0.23.0"
python = "^3.10"
redis = "^7.0.0"
toml = "^0.10.2"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.9.1"
black = "^25.0.0"
isort = "^7.0.0"
pylint = "^4.0.0"
pytest = "^9.0.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hatamiarash7/wireguard-peer-monitoring/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
